tests/baselines/reference/mappedTypeRelationships.errors.txt
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(11,5): error TS2322: Type 'T[keyof T]' is not assignable to type 'U[keyof T]'.
  Type 'T' is not assignable to type 'U'.
    'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(16,5): error TS2322: Type 'T[K]' is not assignable to type 'U[K]'.
  Type 'T' is not assignable to type 'U'.
    'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(20,5): error TS2536: Type 'keyof U' cannot be used to index type 'T'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(21,12): error TS2536: Type 'keyof U' cannot be used to index type 'T'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(25,5): error TS2536: Type 'K' cannot be used to index type 'T'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(26,12): error TS2536: Type 'K' cannot be used to index type 'T'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(30,5): error TS2322: Type 'T[keyof T] | undefined' is not assignable to type 'T[keyof T]'.
  Type 'undefined' is not assignable to type 'T[keyof T]'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(35,5): error TS2322: Type 'T[K] | undefined' is not assignable to type 'T[K]'.
  Type 'undefined' is not assignable to type 'T[K]'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(40,5): error TS2322: Type 'U[keyof T] | undefined' is not assignable to type 'T[keyof T]'.
  Type 'undefined' is not assignable to type 'T[keyof T]'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(41,5): error TS2322: Type 'T[keyof T]' is not assignable to type 'U[keyof T] | undefined'.
  Type 'T[string] | T[number] | T[symbol]' is not assignable to type 'U[keyof T] | undefined'.
    Type 'T[string]' is not assignable to type 'U[keyof T] | undefined'.
      Type 'T[string]' is not assignable to type 'U[keyof T]'.
        Type 'T' is not assignable to type 'U'.
          'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
            Type 'T[keyof T]' is not assignable to type 'U[keyof T]'.
              Type 'T' is not assignable to type 'U'.
                'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(45,5): error TS2322: Type 'U[K] | undefined' is not assignable to type 'T[K]'.
  Type 'undefined' is not assignable to type 'T[K]'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(46,5): error TS2322: Type 'T[K]' is not assignable to type 'U[K] | undefined'.
  Type 'T[keyof T]' is not assignable to type 'U[K] | undefined'.
    Type 'T[string] | T[number] | T[symbol]' is not assignable to type 'U[K] | undefined'.
      Type 'T[string]' is not assignable to type 'U[K] | undefined'.
        Type 'T[string]' is not assignable to type 'U[K]'.
          Type 'T' is not assignable to type 'U'.
            'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
              Type 'T[keyof T]' is not assignable to type 'U[K]'.
                Type 'T' is not assignable to type 'U'.
                  'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
                    Type 'T[K]' is not assignable to type 'U[K]'.
                      Type 'T' is not assignable to type 'U'.
                        'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(51,5): error TS2542: Index signature in type 'Readonly<T>' only permits reading.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(56,5): error TS2542: Index signature in type 'Readonly<T>' only permits reading.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(61,5): error TS2322: Type 'T[keyof T]' is not assignable to type 'U[keyof T]'.
  Type 'T' is not assignable to type 'U'.
    'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(61,5): error TS2542: Index signature in type 'Readonly<U>' only permits reading.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(66,5): error TS2322: Type 'T[K]' is not assignable to type 'U[K]'.
  Type 'T' is not assignable to type 'U'.
    'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(66,5): error TS2542: Index signature in type 'Readonly<U>' only permits reading.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(72,5): error TS2322: Type 'Partial<T>' is not assignable to type 'T'.
  'Partial<T>' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(78,5): error TS2322: Type 'Partial<Thing>' is not assignable to type 'Partial<T>'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(88,5): error TS2322: Type 'Readonly<Thing>' is not assignable to type 'Readonly<T>'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(127,5): error TS2322: Type 'Partial<U>' is not assignable to type 'Identity<U>'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(143,5): error TS2322: Type '{ [P in keyof T]: T[P]; }' is not assignable to type '{ [P in keyof T]: U[P]; }'.
  Type 'T[P]' is not assignable to type 'U[P]'.
    Type 'T' is not assignable to type 'U'.
      'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(148,5): error TS2322: Type '{ [P in keyof T]: T[P]; }' is not assignable to type '{ [P in keyof U]: U[P]; }'.
  Type 'keyof U' is not assignable to type 'keyof T'.
    Type 'string | number | symbol' is not assignable to type 'keyof T'.
      Type 'string' is not assignable to type 'keyof T'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(153,5): error TS2322: Type '{ [P in K]: T[P]; }' is not assignable to type '{ [P in keyof T]: T[P]; }'.
  Type 'keyof T' is not assignable to type 'K'.
    'keyof T' is assignable to the constraint of type 'K', but 'K' could be instantiated with a different subtype of constraint 'string | number | symbol'.
      Type 'string | number | symbol' is not assignable to type 'K'.
        'string | number | symbol' is assignable to the constraint of type 'K', but 'K' could be instantiated with a different subtype of constraint 'string | number | symbol'.
          Type 'string' is not assignable to type 'K'.
            'string' is assignable to the constraint of type 'K', but 'K' could be instantiated with a different subtype of constraint 'string | number | symbol'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(158,5): error TS2322: Type '{ [P in K]: T[P]; }' is not assignable to type '{ [P in keyof U]: U[P]; }'.
  Type 'keyof U' is not assignable to type 'K'.
    'keyof U' is assignable to the constraint of type 'K', but 'K' could be instantiated with a different subtype of constraint 'string | number | symbol'.
      Type 'string | number | symbol' is not assignable to type 'K'.
        'string | number | symbol' is assignable to the constraint of type 'K', but 'K' could be instantiated with a different subtype of constraint 'string | number | symbol'.
          Type 'string' is not assignable to type 'K'.
            'string' is assignable to the constraint of type 'K', but 'K' could be instantiated with a different subtype of constraint 'string | number | symbol'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(163,5): error TS2322: Type '{ [P in K]: T[P]; }' is not assignable to type '{ [P in keyof T]: U[P]; }'.
  Type 'keyof T' is not assignable to type 'K'.
    'keyof T' is assignable to the constraint of type 'K', but 'K' could be instantiated with a different subtype of constraint 'string | number | symbol'.
      Type 'string | number | symbol' is not assignable to type 'K'.
        'string | number | symbol' is assignable to the constraint of type 'K', but 'K' could be instantiated with a different subtype of constraint 'string | number | symbol'.
          Type 'string' is not assignable to type 'K'.
            'string' is assignable to the constraint of type 'K', but 'K' could be instantiated with a different subtype of constraint 'string | number | symbol'.
tests/cases/conformance/types/mapped/mappedTypeRelationships.ts(168,5): error TS2322: Type '{ [P in K]: T[P]; }' is not assignable to type '{ [P in K]: U[P]; }'.
  Type 'T[P]' is not assignable to type 'U[P]'.
    Type 'T' is not assignable to type 'U'.
      'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.


==== tests/cases/conformance/types/mapped/mappedTypeRelationships.ts (28 errors) ====
    function f1<T>(x: T, k: keyof T) {
        return x[k];
    }
    
    function f2<T, K extends keyof T>(x: T, k: K) {
        return x[k];
    }
    
    function f3<T, U extends T>(x: T, y: U, k: keyof T) {
        x[k] = y[k];
        y[k] = x[k];  // Error
        ~~~~
!!! error TS2322: Type '{|T|0|}[keyof {|T|1|}]' is not assignable to type '{|U|2|}[keyof {|T|3|}]'.
!!! error TS2322:   Type '{|T|4|}' is not assignable to type '{|U|5|}'.
!!! error TS2322:     '{|T|6|}' is assignable to the constraint of type '{|U|7|}', but '{|U|8|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:9:13
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:9:13
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:9:16
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:9:13
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:9:13
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:9:16
!!! annotated symbol 6 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:9:13
!!! annotated symbol 7 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:9:16
!!! annotated symbol 8 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:9:16
    }
    
    function f4<T, U extends T, K extends keyof T>(x: T, y: U, k: K) {
        x[k] = y[k];
        y[k] = x[k];  // Error
        ~~~~
!!! error TS2322: Type '{|T|0|}[{|K|1|}]' is not assignable to type '{|U|2|}[{|K|3|}]'.
!!! error TS2322:   Type '{|T|4|}' is not assignable to type '{|U|5|}'.
!!! error TS2322:     '{|T|6|}' is assignable to the constraint of type '{|U|7|}', but '{|U|8|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:14:13
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:14:29
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:14:16
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:14:29
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:14:13
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:14:16
!!! annotated symbol 6 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:14:13
!!! annotated symbol 7 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:14:16
!!! annotated symbol 8 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:14:16
    }
    
    function f5<T, U extends T>(x: T, y: U, k: keyof U) {
        x[k] = y[k];  // Error
        ~~~~
!!! error TS2536: Type 'keyof U' cannot be used to index type 'T'.
        y[k] = x[k];  // Error
               ~~~~
!!! error TS2536: Type 'keyof U' cannot be used to index type 'T'.
    }
    
    function f6<T, U extends T, K extends keyof U>(x: T, y: U, k: K) {
        x[k] = y[k];  // Error
        ~~~~
!!! error TS2536: Type 'K' cannot be used to index type 'T'.
        y[k] = x[k];  // Error
               ~~~~
!!! error TS2536: Type 'K' cannot be used to index type 'T'.
    }
    
    function f10<T>(x: T, y: Partial<T>, k: keyof T) {
        x[k] = y[k];  // Error
        ~~~~
!!! error TS2322: Type '{|T|0|}[keyof {|T|1|}] | undefined' is not assignable to type '{|T|2|}[keyof {|T|3|}]'.
!!! error TS2322:   Type 'undefined' is not assignable to type '{|T|4|}[keyof {|T|5|}]'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:29:14
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:29:14
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:29:14
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:29:14
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:29:14
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:29:14
        y[k] = x[k];
    }
    
    function f11<T, K extends keyof T>(x: T, y: Partial<T>, k: K) {
        x[k] = y[k];  // Error
        ~~~~
!!! error TS2322: Type '{|T|0|}[{|K|1|}] | undefined' is not assignable to type '{|T|2|}[{|K|3|}]'.
!!! error TS2322:   Type 'undefined' is not assignable to type '{|T|4|}[{|K|5|}]'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:34:14
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:34:17
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:34:14
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:34:17
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:34:14
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:34:17
        y[k] = x[k];
    }
    
    function f12<T, U extends T>(x: T, y: Partial<U>, k: keyof T) {
        x[k] = y[k];  // Error
        ~~~~
!!! error TS2322: Type '{|U|0|}[keyof {|T|1|}] | undefined' is not assignable to type '{|T|2|}[keyof {|T|3|}]'.
!!! error TS2322:   Type 'undefined' is not assignable to type '{|T|4|}[keyof {|T|5|}]'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:17
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
        y[k] = x[k];  // Error
        ~~~~
!!! error TS2322: Type '{|T|0|}[keyof {|T|1|}]' is not assignable to type '{|U|2|}[keyof {|T|3|}] | undefined'.
!!! error TS2322:   Type '{|T|4|}[string] | {|T|5|}[number] | {|T|6|}[symbol]' is not assignable to type '{|U|7|}[keyof {|T|8|}] | undefined'.
!!! error TS2322:     Type '{|T|9|}[string]' is not assignable to type '{|U|10|}[keyof {|T|11|}] | undefined'.
!!! error TS2322:       Type '{|T|12|}[string]' is not assignable to type '{|U|13|}[keyof {|T|14|}]'.
!!! error TS2322:         Type '{|T|15|}' is not assignable to type '{|U|16|}'.
!!! error TS2322:           '{|T|17|}' is assignable to the constraint of type '{|U|18|}', but '{|U|19|}' could be instantiated with a different subtype of constraint '{}'.
!!! error TS2322:             Type '{|T|20|}[keyof {|T|21|}]' is not assignable to type '{|U|22|}[keyof {|T|23|}]'.
!!! error TS2322:               Type '{|T|24|}' is not assignable to type '{|U|25|}'.
!!! error TS2322:                 '{|T|26|}' is assignable to the constraint of type '{|U|27|}', but '{|U|28|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:17
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 6 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 7 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:17
!!! annotated symbol 8 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 9 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 10 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:17
!!! annotated symbol 11 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 12 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 13 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:17
!!! annotated symbol 14 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 15 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 16 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:17
!!! annotated symbol 17 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 18 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:17
!!! annotated symbol 19 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:17
!!! annotated symbol 20 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 21 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 22 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:17
!!! annotated symbol 23 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 24 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 25 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:17
!!! annotated symbol 26 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:14
!!! annotated symbol 27 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:17
!!! annotated symbol 28 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:39:17
    }
    
    function f13<T, U extends T, K extends keyof T>(x: T, y: Partial<U>, k: K) {
        x[k] = y[k];  // Error
        ~~~~
!!! error TS2322: Type '{|U|0|}[{|K|1|}] | undefined' is not assignable to type '{|T|2|}[{|K|3|}]'.
!!! error TS2322:   Type 'undefined' is not assignable to type '{|T|4|}[{|K|5|}]'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:17
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:30
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:14
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:30
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:14
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:30
        y[k] = x[k];  // Error
        ~~~~
!!! error TS2322: Type '{|T|0|}[{|K|1|}]' is not assignable to type '{|U|2|}[{|K|3|}] | undefined'.
!!! error TS2322:   Type '{|T|4|}[keyof {|T|5|}]' is not assignable to type '{|U|6|}[{|K|7|}] | undefined'.
!!! error TS2322:     Type '{|T|8|}[string] | {|T|9|}[number] | {|T|10|}[symbol]' is not assignable to type '{|U|11|}[{|K|12|}] | undefined'.
!!! error TS2322:       Type '{|T|13|}[string]' is not assignable to type '{|U|14|}[{|K|15|}] | undefined'.
!!! error TS2322:         Type '{|T|16|}[string]' is not assignable to type '{|U|17|}[{|K|18|}]'.
!!! error TS2322:           Type '{|T|19|}' is not assignable to type '{|U|20|}'.
!!! error TS2322:             '{|T|21|}' is assignable to the constraint of type '{|U|22|}', but '{|U|23|}' could be instantiated with a different subtype of constraint '{}'.
!!! error TS2322:               Type '{|T|24|}[keyof {|T|25|}]' is not assignable to type '{|U|26|}[{|K|27|}]'.
!!! error TS2322:                 Type '{|T|28|}' is not assignable to type '{|U|29|}'.
!!! error TS2322:                   '{|T|30|}' is assignable to the constraint of type '{|U|31|}', but '{|U|32|}' could be instantiated with a different subtype of constraint '{}'.
!!! error TS2322:                     Type '{|T|33|}[{|K|34|}]' is not assignable to type '{|U|35|}[{|K|36|}]'.
!!! error TS2322:                       Type '{|T|37|}' is not assignable to type '{|U|38|}'.
!!! error TS2322:                         '{|T|39|}' is assignable to the constraint of type '{|U|40|}', but '{|U|41|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:14
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:30
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:17
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:30
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:14
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:14
!!! annotated symbol 6 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:17
!!! annotated symbol 7 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:30
!!! annotated symbol 8 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:14
!!! annotated symbol 9 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:14
!!! annotated symbol 10 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:14
!!! annotated symbol 11 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:17
!!! annotated symbol 12 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:30
!!! annotated symbol 13 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:14
!!! annotated symbol 14 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:17
!!! annotated symbol 15 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:30
!!! annotated symbol 16 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:14
!!! annotated symbol 17 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:17
!!! annotated symbol 18 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:30
!!! annotated symbol 19 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:14
!!! annotated symbol 20 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:17
!!! annotated symbol 21 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:14
!!! annotated symbol 22 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:17
!!! annotated symbol 23 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:17
!!! annotated symbol 24 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:14
!!! annotated symbol 25 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:14
!!! annotated symbol 26 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:17
!!! annotated symbol 27 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:30
!!! annotated symbol 28 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:14
!!! annotated symbol 29 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:17
!!! annotated symbol 30 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:14
!!! annotated symbol 31 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:17
!!! annotated symbol 32 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:17
!!! annotated symbol 33 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:14
!!! annotated symbol 34 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:30
!!! annotated symbol 35 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:17
!!! annotated symbol 36 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:30
!!! annotated symbol 37 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:14
!!! annotated symbol 38 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:17
!!! annotated symbol 39 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:14
!!! annotated symbol 40 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:17
!!! annotated symbol 41 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:44:17
    }
    
    function f20<T>(x: T, y: Readonly<T>, k: keyof T) {
        x[k] = y[k];
        y[k] = x[k];  // Error
        ~~~~
!!! error TS2542: Index signature in type 'Readonly<T>' only permits reading.
    }
    
    function f21<T, K extends keyof T>(x: T, y: Readonly<T>, k: K) {
        x[k] = y[k];
        y[k] = x[k];  // Error
        ~~~~
!!! error TS2542: Index signature in type 'Readonly<T>' only permits reading.
    }
    
    function f22<T, U extends T>(x: T, y: Readonly<U>, k: keyof T) {
        x[k] = y[k];
        y[k] = x[k];  // Error
        ~~~~
!!! error TS2322: Type '{|T|0|}[keyof {|T|1|}]' is not assignable to type '{|U|2|}[keyof {|T|3|}]'.
!!! error TS2322:   Type '{|T|4|}' is not assignable to type '{|U|5|}'.
!!! error TS2322:     '{|T|6|}' is assignable to the constraint of type '{|U|7|}', but '{|U|8|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:59:14
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:59:14
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:59:17
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:59:14
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:59:14
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:59:17
!!! annotated symbol 6 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:59:14
!!! annotated symbol 7 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:59:17
!!! annotated symbol 8 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:59:17
        ~~~~
!!! error TS2542: Index signature in type 'Readonly<U>' only permits reading.
    }
    
    function f23<T, U extends T, K extends keyof T>(x: T, y: Readonly<U>, k: K) {
        x[k] = y[k];
        y[k] = x[k];  // Error
        ~~~~
!!! error TS2322: Type '{|T|0|}[{|K|1|}]' is not assignable to type '{|U|2|}[{|K|3|}]'.
!!! error TS2322:   Type '{|T|4|}' is not assignable to type '{|U|5|}'.
!!! error TS2322:     '{|T|6|}' is assignable to the constraint of type '{|U|7|}', but '{|U|8|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:64:14
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:64:30
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:64:17
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:64:30
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:64:14
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:64:17
!!! annotated symbol 6 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:64:14
!!! annotated symbol 7 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:64:17
!!! annotated symbol 8 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:64:17
        ~~~~
!!! error TS2542: Index signature in type 'Readonly<U>' only permits reading.
    }
    
    type Thing = { a: string, b: string };
    
    function f30<T>(x: T, y: Partial<T>) {
        x = y;  // Error
        ~
!!! error TS2322: Type '{|Partial|0|}<{|T|1|}>' is not assignable to type '{|T|2|}'.
!!! error TS2322:   '{|Partial|3|}<{|T|4|}>' is assignable to the constraint of type '{|T|5|}', but '{|T|6|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:1424:6
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:71:14
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:71:14
!!! annotated symbol 3 /.ts/lib.es5.d.ts:1424:6
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:71:14
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:71:14
!!! annotated symbol 6 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:71:14
        y = x;
    }
    
    function f31<T extends Thing>(x: Partial<Thing>, y: Partial<T>) {
        x = y;
        y = x;  // Error
        ~
!!! error TS2322: Type '{|Partial|0|}<{|Thing|1|}>' is not assignable to type '{|Partial|2|}<{|T|3|}>'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:1424:6
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:69:6
!!! annotated symbol 2 /.ts/lib.es5.d.ts:1424:6
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:76:14
    }
    
    function f40<T>(x: T, y: Readonly<T>) {
        x = y;
        y = x;
    }
    
    function f41<T extends Thing>(x: Readonly<Thing>, y: Readonly<T>) {
        x = y;
        y = x;  // Error
        ~
!!! error TS2322: Type '{|Readonly|0|}<{|Thing|1|}>' is not assignable to type '{|Readonly|2|}<{|T|3|}>'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:1438:6
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:69:6
!!! annotated symbol 2 /.ts/lib.es5.d.ts:1438:6
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:86:14
    }
    
    type Item = {
        name: string;
    }
    
    type ItemMap = {
        [x: string]: Item;
    }
    
    function f50<T extends ItemMap>(obj: T, key: keyof T) {
        let item: Item = obj[key];
        return obj[key].name;
    }
    
    function f51<T extends ItemMap, K extends keyof T>(obj: T, key: K) {
        let item: Item = obj[key];
        return obj[key].name;
    }
    
    type T1<T> = {
        [P in keyof T]: T[P];
    }
    
    type T2<T> = {
        [P in keyof T]: T[P];
    }
    
    function f60<U>(x: T1<U>, y: T2<U>) {
        x = y;
        y = x;
    }
    
    type Identity<T> = {
        [P in keyof T]: T[P];
    }
    
    function f61<U>(x: Identity<U>, y: Partial<U>) {
        x = y;  // Error
        ~
!!! error TS2322: Type '{|Partial|0|}<{|U|1|}>' is not assignable to type '{|Identity|2|}<{|U|3|}>'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:1424:6
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:126:14
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:122:6
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:126:14
        y = x;
    }
    
    function f62<U>(x: Identity<U>, y: Readonly<U>) {
        x = y;
        y = x;
    }
    
    function f70<T>(x: { [P in keyof T]: T[P] }, y: { [P in keyof T]: T[P] }) {
        x = y;
        y = x;
    }
    
    function f71<T, U extends T>(x: { [P in keyof T]: T[P] }, y: { [P in keyof T]: U[P] }) {
        x = y;
        y = x;  // Error
        ~
!!! error TS2322: Type '{ [{|P|0|} in keyof {|T|1|}]: {|T|2|}[{|P|3|}]; }' is not assignable to type '{ [{|P|4|} in keyof {|T|5|}]: {|U|6|}[{|P|7|}]; }'.
!!! error TS2322:   Type '{|T|8|}[{|P|9|}]' is not assignable to type '{|U|10|}[{|P|11|}]'.
!!! error TS2322:     Type '{|T|12|}' is not assignable to type '{|U|13|}'.
!!! error TS2322:       '{|T|14|}' is assignable to the constraint of type '{|U|15|}', but '{|U|16|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:141:36
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:141:14
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:141:14
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:141:36
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:141:65
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:141:14
!!! annotated symbol 6 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:141:17
!!! annotated symbol 7 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:141:65
!!! annotated symbol 8 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:141:14
!!! annotated symbol 9 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:141:65
!!! annotated symbol 10 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:141:17
!!! annotated symbol 11 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:141:65
!!! annotated symbol 12 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:141:14
!!! annotated symbol 13 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:141:17
!!! annotated symbol 14 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:141:14
!!! annotated symbol 15 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:141:17
!!! annotated symbol 16 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:141:17
    }
    
    function f72<T, U extends T>(x: { [P in keyof T]: T[P] }, y: { [P in keyof U]: U[P] }) {
        x = y;
        y = x;  // Error
        ~
!!! error TS2322: Type '{ [{|P|0|} in keyof {|T|1|}]: {|T|2|}[{|P|3|}]; }' is not assignable to type '{ [{|P|4|} in keyof {|U|5|}]: {|U|6|}[{|P|7|}]; }'.
!!! error TS2322:   Type 'keyof {|U|8|}' is not assignable to type 'keyof {|T|9|}'.
!!! error TS2322:     Type 'string | number | symbol' is not assignable to type 'keyof {|T|10|}'.
!!! error TS2322:       Type 'string' is not assignable to type 'keyof {|T|11|}'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:146:36
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:146:14
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:146:14
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:146:36
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:146:65
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:146:17
!!! annotated symbol 6 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:146:17
!!! annotated symbol 7 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:146:65
!!! annotated symbol 8 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:146:17
!!! annotated symbol 9 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:146:14
!!! annotated symbol 10 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:146:14
!!! annotated symbol 11 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:146:14
    }
    
    function f73<T, K extends keyof T>(x: { [P in K]: T[P] }, y: { [P in keyof T]: T[P] }) {
        x = y;
        y = x;  // Error
        ~
!!! error TS2322: Type '{ [{|P|0|} in {|K|1|}]: {|T|2|}[{|P|3|}]; }' is not assignable to type '{ [{|P|4|} in keyof {|T|5|}]: {|T|6|}[{|P|7|}]; }'.
!!! error TS2322:   Type 'keyof {|T|8|}' is not assignable to type '{|K|9|}'.
!!! error TS2322:     'keyof {|T|10|}' is assignable to the constraint of type '{|K|11|}', but '{|K|12|}' could be instantiated with a different subtype of constraint 'string | number | symbol'.
!!! error TS2322:       Type 'string | number | symbol' is not assignable to type '{|K|13|}'.
!!! error TS2322:         'string | number | symbol' is assignable to the constraint of type '{|K|14|}', but '{|K|15|}' could be instantiated with a different subtype of constraint 'string | number | symbol'.
!!! error TS2322:           Type 'string' is not assignable to type '{|K|16|}'.
!!! error TS2322:             'string' is assignable to the constraint of type '{|K|17|}', but '{|K|18|}' could be instantiated with a different subtype of constraint 'string | number | symbol'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:151:42
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:151:17
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:151:14
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:151:42
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:151:65
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:151:14
!!! annotated symbol 6 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:151:14
!!! annotated symbol 7 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:151:65
!!! annotated symbol 8 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:151:14
!!! annotated symbol 9 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:151:17
!!! annotated symbol 10 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:151:14
!!! annotated symbol 11 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:151:17
!!! annotated symbol 12 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:151:17
!!! annotated symbol 13 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:151:17
!!! annotated symbol 14 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:151:17
!!! annotated symbol 15 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:151:17
!!! annotated symbol 16 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:151:17
!!! annotated symbol 17 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:151:17
!!! annotated symbol 18 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:151:17
    }
    
    function f74<T, U extends T, K extends keyof T>(x: { [P in K]: T[P] }, y: { [P in keyof U]: U[P] }) {
        x = y;
        y = x;  // Error
        ~
!!! error TS2322: Type '{ [{|P|0|} in {|K|1|}]: {|T|2|}[{|P|3|}]; }' is not assignable to type '{ [{|P|4|} in keyof {|U|5|}]: {|U|6|}[{|P|7|}]; }'.
!!! error TS2322:   Type 'keyof {|U|8|}' is not assignable to type '{|K|9|}'.
!!! error TS2322:     'keyof {|U|10|}' is assignable to the constraint of type '{|K|11|}', but '{|K|12|}' could be instantiated with a different subtype of constraint 'string | number | symbol'.
!!! error TS2322:       Type 'string | number | symbol' is not assignable to type '{|K|13|}'.
!!! error TS2322:         'string | number | symbol' is assignable to the constraint of type '{|K|14|}', but '{|K|15|}' could be instantiated with a different subtype of constraint 'string | number | symbol'.
!!! error TS2322:           Type 'string' is not assignable to type '{|K|16|}'.
!!! error TS2322:             'string' is assignable to the constraint of type '{|K|17|}', but '{|K|18|}' could be instantiated with a different subtype of constraint 'string | number | symbol'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:156:55
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:156:30
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:156:14
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:156:55
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:156:78
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:156:17
!!! annotated symbol 6 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:156:17
!!! annotated symbol 7 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:156:78
!!! annotated symbol 8 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:156:17
!!! annotated symbol 9 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:156:30
!!! annotated symbol 10 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:156:17
!!! annotated symbol 11 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:156:30
!!! annotated symbol 12 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:156:30
!!! annotated symbol 13 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:156:30
!!! annotated symbol 14 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:156:30
!!! annotated symbol 15 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:156:30
!!! annotated symbol 16 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:156:30
!!! annotated symbol 17 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:156:30
!!! annotated symbol 18 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:156:30
    }
    
    function f75<T, U extends T, K extends keyof T>(x: { [P in K]: T[P] }, y: { [P in keyof T]: U[P] }) {
        x = y;
        y = x;  // Error
        ~
!!! error TS2322: Type '{ [{|P|0|} in {|K|1|}]: {|T|2|}[{|P|3|}]; }' is not assignable to type '{ [{|P|4|} in keyof {|T|5|}]: {|U|6|}[{|P|7|}]; }'.
!!! error TS2322:   Type 'keyof {|T|8|}' is not assignable to type '{|K|9|}'.
!!! error TS2322:     'keyof {|T|10|}' is assignable to the constraint of type '{|K|11|}', but '{|K|12|}' could be instantiated with a different subtype of constraint 'string | number | symbol'.
!!! error TS2322:       Type 'string | number | symbol' is not assignable to type '{|K|13|}'.
!!! error TS2322:         'string | number | symbol' is assignable to the constraint of type '{|K|14|}', but '{|K|15|}' could be instantiated with a different subtype of constraint 'string | number | symbol'.
!!! error TS2322:           Type 'string' is not assignable to type '{|K|16|}'.
!!! error TS2322:             'string' is assignable to the constraint of type '{|K|17|}', but '{|K|18|}' could be instantiated with a different subtype of constraint 'string | number | symbol'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:161:55
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:161:30
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:161:14
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:161:55
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:161:78
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:161:14
!!! annotated symbol 6 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:161:17
!!! annotated symbol 7 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:161:78
!!! annotated symbol 8 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:161:14
!!! annotated symbol 9 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:161:30
!!! annotated symbol 10 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:161:14
!!! annotated symbol 11 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:161:30
!!! annotated symbol 12 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:161:30
!!! annotated symbol 13 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:161:30
!!! annotated symbol 14 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:161:30
!!! annotated symbol 15 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:161:30
!!! annotated symbol 16 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:161:30
!!! annotated symbol 17 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:161:30
!!! annotated symbol 18 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:161:30
    }
    
    function f76<T, U extends T, K extends keyof T>(x: { [P in K]: T[P] }, y: { [P in K]: U[P] }) {
        x = y;
        y = x;  // Error
        ~
!!! error TS2322: Type '{ [{|P|0|} in {|K|1|}]: {|T|2|}[{|P|3|}]; }' is not assignable to type '{ [{|P|4|} in {|K|5|}]: {|U|6|}[{|P|7|}]; }'.
!!! error TS2322:   Type '{|T|8|}[{|P|9|}]' is not assignable to type '{|U|10|}[{|P|11|}]'.
!!! error TS2322:     Type '{|T|12|}' is not assignable to type '{|U|13|}'.
!!! error TS2322:       '{|T|14|}' is assignable to the constraint of type '{|U|15|}', but '{|U|16|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:166:55
!!! annotated symbol 1 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:166:30
!!! annotated symbol 2 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:166:14
!!! annotated symbol 3 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:166:55
!!! annotated symbol 4 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:166:78
!!! annotated symbol 5 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:166:30
!!! annotated symbol 6 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:166:17
!!! annotated symbol 7 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:166:78
!!! annotated symbol 8 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:166:14
!!! annotated symbol 9 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:166:78
!!! annotated symbol 10 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:166:17
!!! annotated symbol 11 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:166:78
!!! annotated symbol 12 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:166:14
!!! annotated symbol 13 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:166:17
!!! annotated symbol 14 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:166:14
!!! annotated symbol 15 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:166:17
!!! annotated symbol 16 tests/cases/conformance/types/mapped/mappedTypeRelationships.ts:166:17
    }
    
    function f80<T>(t: T): Partial<T> {
        return t;
    }
    
    function f81<T, K extends keyof T>(t: T, k: K): Partial<T[K]> {
        return t[k];
    }
    
    function f82<T, K1 extends keyof T, K2 extends keyof T[K1]>(t: T, k1: K1, k2: K2): Partial<T[K1][K2]> {
        return t[k1][k2];
    }
    